# conjure

./: .MINIONSTATS_1557920204186_7093  .gitignore  .hgignore  .hlint.yaml  .readthedocs.yaml  .tm_properties  .travis.yml  .vimrc  12803.stderr  12803.stdout  13775.stderr  13775.stdout  13787.stderr  13787.stdout  17969.stderr  17969.stdout  18335.stderr  18335.stdout  18363.stderr  18363.stdout  BIBD.ipynb  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.md  DeriveFail.hs  Dockerfile  IntegerDomains.ipynb  LICENSE  Makefile  NOTE  NurseRostering.ipynb  README.md  Setup.hs  TODO  accepty.sh  appveyor.yml  azure-pipelines.yml  cabal.config  cabal.config-7.10.3  cabal.config-7.8.4  (+15 more)
.github/: dependabot.yml
.github/workflows/: assign-issue-author.yml  assign-pr-author.yml  build.yml  docker-publish.yml  docker_publish.yml  publish-ghcr.yml  release.yml  semantic-pr-title.yml  solvers.yml  test-coverage.yml  test.yml
EssenceCatalog/: alan-list.txt  ozgur-list.txt
EssenceCatalog/fromAlan/: prob001.essence  prob002.essence  prob006.essence  prob008.essence  prob009.essence  prob010.essence  prob015.essence  prob016.essence  prob018.essence  prob022.essence  prob024.essence  prob026.essence  prob030.essence  prob031.essence  prob033.essence  prob037.essence  prob110.essence  prob123.essence  prob128.essence  prob131.essence  prob133.essence
EssenceCatalog/fromOzgur/: dominion.essence  prob001.essence  prob002.essence  prob006.essence  prob009.essence  prob010.essence  prob019.essence  prob025.essence  prob028.essence  prob038.essence  prob110.essence  prob115.essence  prob129.essence  prob132.essence
bundles/conjure-macosx/: example.essence  update.sh
bundles/conjure-toCore/: update.sh
datafiles/: reservedNames.txt  reservedOpNames.txt
dev/ghc-optimisation-flags/: options.hs
discussion/: Essence Operators.txt  notes.essence
docker/: Dockerfile.conjure  Dockerfile.runtime
docker/solvers/: Dockerfile.boolector  Dockerfile.cadical  Dockerfile.chuffed  Dockerfile.gecode  Dockerfile.glucose  Dockerfile.kissat  Dockerfile.lingeling  Dockerfile.minion  Dockerfile.minisat_all  Dockerfile.minizinc  Dockerfile.ortools  Dockerfile.runsolver  Dockerfile.wmaxcdcl  Dockerfile.yices  Dockerfile.z3
docs/: .tm_properties  BNFLexer.py  Enumerated_type_operators.ipynb  EssenceLexer.py  Makefile  authors.sh  bits.rst  build.sh  cli.rst  cmd-ui.rst  conf.py  conjure-help.html  conjure-help.txt  conjure.tix  contact.rst  demonstrations.rst  essence.rst  features.rst  index.rst  installation.rst  introduction.rst  make.bat  mkhelp  references.rst  refs.bib  requirements.txt  todo.rst  tutorials-notebook.rst  tutorials.rst  welcome.rst  zreferences.rst
docs/bits/: L_Minus.md  L_abs.md  L_antiSymmetric.md  L_bijective.md  L_equivalence.md  L_irreflexive.md  L_partialOrder.md  L_record.md  L_relation.md  L_sequence.md  L_subsequence.md  L_substring.md  L_tuple.md  defined.md  function.md  letting_domain.md  long_arrow.md  matrix.md  new_type_enum.md  preImage.md  pred.md  unnamed.md
docs/features/: problem-classes.rst
docs/keywords/: subsetEq.rst
docs/notebooks/: Enumerated_type_operators.ipynb  Function_operators.ipynb  IntegerDomains.ipynb  L_bool.ipynb  Partition_operators.ipynb  RelationDomains.ipynb  SequenceDomains.ipynb  Sequence_operators.ipynb  Set_operators.ipynb  TupleDomains.ipynb  VariantDomains.ipynb  absoluteValues.ipynb  addition_subtraction_examples.ipynb  division_and_mod_demonstration.ipynb  division_n_fractions.ipynb  factorial.ipynb  functionDemonstration.ipynb  letting_domain.ipynb  magicHexagon.ipynb  matrix.ipynb  multiplicationDemonstration.ipynb  multiplication_demonstration.ipynb  powers.ipynb  recordDomains.ipynb  toInt_demonstration.ipynb
docs/tutorials/: BIBD.rst  Futoshiki.rst  Groups.rst  LabelledConnectedGraphs.rst  NumberPuzzle.rst  NurseRostering.rst  SimplePermutations.rst  knapsack.rst
etc/: conjure.figlet
etc/dev/: gen.mset.attributes.hs  live_build  live_compile  live_diff  (+1 more)
figlets/: do.sh
ide/: .gitignore  .prettierignore  .prettierrc  .tslintrc.json  .vscodeignore  CHANGELOG.md  README.md  benchMarker.sh  buildExtension.sh  buildServer.sh  exampleDockerFile  genServerDocs.sh  genWebviewDocs.sh  gulpfile.js  index.html  jest.config.js  package-lock.json  package.json  runServer.sh  runServerS.sh  runServerTests.sh  runWebviewTests.sh  runner.sh  singleTreeVisualisation.html  startBrowserSync.sh  tsconfig.json  tslint.json  webpack.config.js
quan-dom/: test.eprime  test.minion  test.solution
scripts/: ReprMainConduit.hs  concatmap-test.hs  datehist.py  fact.hs  fromDropbox.sh  function-attributes.hs  htags  htags-vi  implicit.hs  mkparam  rmifsame.sh  run.sh  solveall.sh  test.sh  toDropbox-bundle.sh  toDropbox.sh  tocore-upload.sh
src/: Bug.hs  Conjure.hs  Constants.hs  DeepSeqUtils.hs  EssenceDefn.hs  Has.hs  Interactive.hs  MonadInterleave.hs  MonadList.hs  Nested.hs  ParsePrint.hs  ParsecUtils.hs  PrintUtils.hs  ReportsModification.hs  TestUtils.hs  UniqueSupply.hs  Utils.hs  ZippyUtils.hs  keywords.txt  reservedNames.txt  reservedOpNames.txt
src-exec/: ConjureAll.hs  ConjureBubbleUp.hs  ConjureNoGuards.hs  ConjureNoTuples.hs  ConjureRefn.hs  ConjureRepr.hs  EssenceDiff.hs  Interactive.hs  RefnMain.hs  ReprMain.hs  Test.hs  TestMain.hs  ToCoreMain.hs
test/: AllTests.hs
testdata/: 1.essence  1.essence.expected  1.essence.ppPrint  1.essence.raw  10.essence.expected  10.essence.raw  11.essence.expected  11.essence.raw  12.essence  12.essence.expected  12.essence.raw  13.essence  14.essence.raw  2.essence  2.essence.expected  2.essence.ppPrint  2.essence.raw  3.essence  3.essence.expected  3.essence.ppPrint  3.essence.raw  4.essence  4.essence.expected  4.essence.ppPrint  5.essence  5.essence.expected  5.essence.ppPrint  5.essence.raw  6.essence  6.essence.raw  7.essence.expected  7.essence.raw  8.essence  8.essence.raw  9.essence.expected  9.essence.raw  Expr.unit  complex-quan.essence  double-quan-guarded.essence  double-quan-guarded.essence.expected  (+71 more)
tests/: README.md  acceptAllOutputs.sh  allfiles.txt  genAllFiles.sh
(+31800 files in other folders)
