
Name:           conjure-cp
Version:        1.0
Synopsis:       Extensible Automated Constraint Modelling
Description:    .
Homepage:       http://www.cs.st-andrews.ac.uk/~ozgur
License:        AllRightsReserved
Author:         Ozgur Akgun
Maintainer:     ozgur.akgun@st-andrews.ac.uk
Category:       Constraint Programming
Build-type:     Simple
Cabal-version:  >= 1.20

Library
    default-language : Haskell2010
    hs-source-dirs   : src

    exposed-modules  : Paths_conjure_cp

                     , Conjure.Prelude
                     , Conjure.RepositoryVersion
                     , Conjure.Bug

                     -- definitions of language constructs
                     , Conjure.Language.AdHoc
                     , Conjure.Language.Definition
                     , Conjure.Language.Name
                     , Conjure.Language.Constant
                     , Conjure.Language.AbstractLiteral
                     , Conjure.Language.Domain
                     , Conjure.Language.Domain.Monoid
                     , Conjure.Language.Domain.AddAttributes
                     , Conjure.Language.Type
                     , Conjure.Language.Lenses
                     , Conjure.Language.TH

                     , Conjure.Language.Expression.Internal.Generated
                     , Conjure.Language.Expression.DomainSizeOf

                     , Conjure.Language.Expression.Op
                     , Conjure.Language.Expression.Op.Internal.Common
                     , Conjure.Language.Expression.Op.Internal.Generated

                     , Conjure.Language.Expression.Op.Active
                     , Conjure.Language.Expression.Op.AllDiff
                     , Conjure.Language.Expression.Op.And
                     , Conjure.Language.Expression.Op.Apart
                     , Conjure.Language.Expression.Op.AttributeAsConstraint
                     , Conjure.Language.Expression.Op.Defined
                     , Conjure.Language.Expression.Op.Div
                     , Conjure.Language.Expression.Op.DontCare
                     , Conjure.Language.Expression.Op.Eq
                     , Conjure.Language.Expression.Op.Factorial
                     , Conjure.Language.Expression.Op.Flatten
                     , Conjure.Language.Expression.Op.Freq
                     , Conjure.Language.Expression.Op.Geq
                     , Conjure.Language.Expression.Op.Gt
                     , Conjure.Language.Expression.Op.Hist
                     , Conjure.Language.Expression.Op.Iff
                     , Conjure.Language.Expression.Op.Image
                     , Conjure.Language.Expression.Op.Imply
                     , Conjure.Language.Expression.Op.In
                     , Conjure.Language.Expression.Op.Indexing
                     , Conjure.Language.Expression.Op.Intersect
                     , Conjure.Language.Expression.Op.Leq
                     , Conjure.Language.Expression.Op.LexLeq
                     , Conjure.Language.Expression.Op.LexLt
                     , Conjure.Language.Expression.Op.Lt
                     , Conjure.Language.Expression.Op.Max
                     , Conjure.Language.Expression.Op.Min
                     , Conjure.Language.Expression.Op.Minus
                     , Conjure.Language.Expression.Op.Mod
                     , Conjure.Language.Expression.Op.Negate
                     , Conjure.Language.Expression.Op.Neq
                     , Conjure.Language.Expression.Op.Not
                     , Conjure.Language.Expression.Op.Or
                     , Conjure.Language.Expression.Op.Participants
                     , Conjure.Language.Expression.Op.Parts
                     , Conjure.Language.Expression.Op.Party
                     , Conjure.Language.Expression.Op.Pow
                     , Conjure.Language.Expression.Op.PowerSet
                     , Conjure.Language.Expression.Op.PreImage
                     , Conjure.Language.Expression.Op.Product
                     , Conjure.Language.Expression.Op.Range
                     , Conjure.Language.Expression.Op.RelationProj
                     , Conjure.Language.Expression.Op.Restrict
                     , Conjure.Language.Expression.Op.Slicing
                     , Conjure.Language.Expression.Op.Subsequence
                     , Conjure.Language.Expression.Op.Subset
                     , Conjure.Language.Expression.Op.SubsetEq
                     , Conjure.Language.Expression.Op.Substring
                     , Conjure.Language.Expression.Op.Sum
                     , Conjure.Language.Expression.Op.Supset
                     , Conjure.Language.Expression.Op.SupsetEq
                     , Conjure.Language.Expression.Op.Together
                     , Conjure.Language.Expression.Op.ToInt
                     , Conjure.Language.Expression.Op.ToMSet
                     , Conjure.Language.Expression.Op.ToRelation
                     , Conjure.Language.Expression.Op.ToSet
                     , Conjure.Language.Expression.Op.True
                     , Conjure.Language.Expression.Op.TwoBars
                     , Conjure.Language.Expression.Op.Union

                     -- and some operations on the language constructs
                     , Conjure.Language.CategoryOf
                     , Conjure.Language.TypeOf
                     , Conjure.Language.DomainOf
                     , Conjure.Language.DomainSizeOf
                     , Conjure.Language.RepresentationOf
                     , Conjure.Language.Arbitrary
                     , Conjure.Language.Instantiate
                     , Conjure.Language.ModelDiff
                     , Conjure.Language.ModelStats
                     , Conjure.Language.Lexer
                     , Conjure.Language.Parser
                     , Conjure.Language.Pretty
                     , Conjure.Language.NameResolution
                     , Conjure.Language.ZeroVal
                     , Conjure.Process.Sanity
                     , Conjure.Process.Enums
                     , Conjure.Process.Unnameds
                     , Conjure.Process.Enumerate
                     , Conjure.Process.FiniteGivens
                     , Conjure.Process.LettingsForComplexInDoms
                     , Conjure.Process.AttributeAsConstraints

                     -- definitions of representations: how to go down and up
                     , Conjure.Representations
                     , Conjure.Representations.Internal
                     , Conjure.Representations.Common
                     , Conjure.Representations.Combined
                     , Conjure.Representations.Primitive
                     , Conjure.Representations.Tuple
                     , Conjure.Representations.Record
                     , Conjure.Representations.Variant
                     , Conjure.Representations.Set.Occurrence
                     , Conjure.Representations.Set.Explicit
                     , Conjure.Representations.Set.ExplicitVarSizeWithMarker
                     , Conjure.Representations.Set.ExplicitVarSizeWithFlags
                     , Conjure.Representations.MSet.ExplicitVarSizeWithFlags
                     , Conjure.Representations.Function.Function1D
                     , Conjure.Representations.Function.Function1DPartial
                     , Conjure.Representations.Function.FunctionND
                     , Conjure.Representations.Function.FunctionNDPartial
                     , Conjure.Representations.Function.FunctionAsRelation
                     , Conjure.Representations.Sequence.ExplicitBounded
                     , Conjure.Representations.Relation.RelationAsMatrix
                     , Conjure.Representations.Relation.RelationAsSet
                     , Conjure.Representations.Partition.Occurrence
                     , Conjure.Representations.Partition.PartitionAsSet

                     -- definitions of rules
                     , Conjure.Rules.Definition
                     , Conjure.Rules.Import

                     , Conjure.Rules.Vertical.Tuple
                     , Conjure.Rules.Vertical.Record
                     , Conjure.Rules.Vertical.Variant
                     , Conjure.Rules.Vertical.Matrix

                     , Conjure.Rules.Horizontal.Set
                     , Conjure.Rules.Vertical.Set.Occurrence
                     , Conjure.Rules.Vertical.Set.Explicit
                     , Conjure.Rules.Vertical.Set.ExplicitVarSizeWithMarker
                     , Conjure.Rules.Vertical.Set.ExplicitVarSizeWithFlags

                     , Conjure.Rules.Horizontal.MSet
                     , Conjure.Rules.Vertical.MSet.ExplicitVarSizeWithFlags

                     , Conjure.Rules.Horizontal.Function
                     , Conjure.Rules.Vertical.Function.Function1D
                     , Conjure.Rules.Vertical.Function.Function1DPartial
                     , Conjure.Rules.Vertical.Function.FunctionND
                     , Conjure.Rules.Vertical.Function.FunctionNDPartial
                     , Conjure.Rules.Vertical.Function.FunctionAsRelation

                     , Conjure.Rules.Horizontal.Sequence
                     , Conjure.Rules.Vertical.Sequence.ExplicitBounded

                     , Conjure.Rules.Horizontal.Relation
                     , Conjure.Rules.Vertical.Relation.RelationAsMatrix
                     , Conjure.Rules.Vertical.Relation.RelationAsSet

                     , Conjure.Rules.Horizontal.Partition
                     , Conjure.Rules.Vertical.Partition.PartitionAsSet
                     , Conjure.Rules.Vertical.Partition.Occurrence

                     , Conjure.Rules.BubbleUp
                     , Conjure.Rules.DontCare

                     -- supporting modules for the user interfacing parts
                     , Conjure.UI
                     , Conjure.UI.IO
                     , Conjure.UI.Model
                     , Conjure.UI.RefineParam
                     , Conjure.UI.TranslateSolution
                     , Conjure.UI.ValidateSolution
                     , Conjure.UI.TypeCheck

                     , Conjure.UI.LogFollow
                     
                     , Data.Global
                     , Data.Global.Registry

    build-depends    : base
                     , aeson
                     , bytestring
                     , cereal
                     , cmdargs
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , hashable
                     , integer-gmp
                     , mtl
                     , parsec >= 3
                     , pipes
                     , pretty
                     , QuickCheck
                     , random
                     , safe
                     , scientific
                     , shelly
                     , split
                     , stm
                     , syb
                     , template-haskell
                     , text
                     , transformers >= 0.4
                     , uniplate
                     , unordered-containers
                     , vector

    default-extensions:
        FlexibleContexts
        FlexibleInstances
        MultiParamTypeClasses
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        TypeOperators
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall


Executable conjure
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : Main.hs
    build-depends    : conjure-cp
                     , base
                     , cmdargs
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M4G


test-suite conjure-testing
    type             : exitcode-stdio-1.0
    default-language : Haskell2010
    hs-source-dirs   : src/test
    main-is          : TestsMain.hs
    build-depends    : conjure-cp
                     , base
                     , bytestring
                     , containers
                     , shelly
                     , tasty
                     , tasty-ant-xml
                     , tasty-golden
                     , tasty-hunit
                     , text
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M4G
