
Name:           conjure-cp
Version:        2.2.0
Synopsis:       Conjure: The Automated Constraint Modelling Tool
Description:    .
Homepage:       http://github.com/conjure-cp/conjure
License:        BSD3
License-file:   LICENSE
Author:         Özgür Akgün
Maintainer:     ozgurakgun@gmail.com
Category:       Constraint Programming
Build-type:     Simple
Cabal-version:  >= 1.20

Library
    default-language : Haskell2010
    hs-source-dirs   : src

    exposed-modules  : Paths_conjure_cp

                     , Conjure.Prelude
                     , Conjure.RepositoryVersion
                     , Conjure.Bug
                     , Conjure.UserError

                     -- definitions of language constructs
                     , Conjure.Language
                     , Conjure.Language.AdHoc
                     , Conjure.Language.Definition
                     , Conjure.Language.Expression
                     , Conjure.Language.Name
                     , Conjure.Language.NameGen
                     , Conjure.Language.Constant
                     , Conjure.Language.AbstractLiteral
                     , Conjure.Language.Domain
                     , Conjure.Language.Domain.AddAttributes
                     , Conjure.Language.Type
                     , Conjure.Language.Lenses
                     , Conjure.Language.TH

                     , Conjure.Language.Expression.Internal.Generated
                     , Conjure.Language.Expression.DomainSizeOf

                     , Conjure.Language.Expression.Op
                     , Conjure.Language.Expression.Op.Internal.Common
                     , Conjure.Language.Expression.Op.Internal.Generated

                     , Conjure.Language.Expression.Op.Active
                     , Conjure.Language.Expression.Op.AllDiff
                     , Conjure.Language.Expression.Op.AllDiffExcept
                     , Conjure.Language.Expression.Op.And
                     , Conjure.Language.Expression.Op.Apart
                     , Conjure.Language.Expression.Op.AttributeAsConstraint
                     , Conjure.Language.Expression.Op.CatchUndef
                     , Conjure.Language.Expression.Op.Defined
                     , Conjure.Language.Expression.Op.Div
                     , Conjure.Language.Expression.Op.DontCare
                     , Conjure.Language.Expression.Op.DotLeq
                     , Conjure.Language.Expression.Op.DotLt
                     , Conjure.Language.Expression.Op.Eq
                     , Conjure.Language.Expression.Op.Factorial
                     , Conjure.Language.Expression.Op.Flatten
                     , Conjure.Language.Expression.Op.Freq
                     , Conjure.Language.Expression.Op.Geq
                     , Conjure.Language.Expression.Op.Gt
                     , Conjure.Language.Expression.Op.Hist
                     , Conjure.Language.Expression.Op.Iff
                     , Conjure.Language.Expression.Op.Image
                     , Conjure.Language.Expression.Op.ImageSet
                     , Conjure.Language.Expression.Op.Imply
                     , Conjure.Language.Expression.Op.In
                     , Conjure.Language.Expression.Op.Indexing
                     , Conjure.Language.Expression.Op.Intersect
                     , Conjure.Language.Expression.Op.Inverse
                     , Conjure.Language.Expression.Op.Leq
                     , Conjure.Language.Expression.Op.LexLeq
                     , Conjure.Language.Expression.Op.LexLt
                     , Conjure.Language.Expression.Op.Lt
                     , Conjure.Language.Expression.Op.Max
                     , Conjure.Language.Expression.Op.Min
                     , Conjure.Language.Expression.Op.Minus
                     , Conjure.Language.Expression.Op.Mod
                     , Conjure.Language.Expression.Op.Negate
                     , Conjure.Language.Expression.Op.Neq
                     , Conjure.Language.Expression.Op.Not
                     , Conjure.Language.Expression.Op.Or
                     , Conjure.Language.Expression.Op.Participants
                     , Conjure.Language.Expression.Op.Parts
                     , Conjure.Language.Expression.Op.Party
                     , Conjure.Language.Expression.Op.Pow
                     , Conjure.Language.Expression.Op.PowerSet
                     , Conjure.Language.Expression.Op.Pred
                     , Conjure.Language.Expression.Op.PreImage
                     , Conjure.Language.Expression.Op.Product
                     , Conjure.Language.Expression.Op.Range
                     , Conjure.Language.Expression.Op.RelationProj
                     , Conjure.Language.Expression.Op.Restrict
                     , Conjure.Language.Expression.Op.Slicing
                     , Conjure.Language.Expression.Op.Subsequence
                     , Conjure.Language.Expression.Op.Subset
                     , Conjure.Language.Expression.Op.SubsetEq
                     , Conjure.Language.Expression.Op.Substring
                     , Conjure.Language.Expression.Op.Succ
                     , Conjure.Language.Expression.Op.Sum
                     , Conjure.Language.Expression.Op.Supset
                     , Conjure.Language.Expression.Op.SupsetEq
                     , Conjure.Language.Expression.Op.TildeLeq
                     , Conjure.Language.Expression.Op.TildeLt
                     , Conjure.Language.Expression.Op.Together
                     , Conjure.Language.Expression.Op.ToInt
                     , Conjure.Language.Expression.Op.ToMSet
                     , Conjure.Language.Expression.Op.ToRelation
                     , Conjure.Language.Expression.Op.ToSet
                     , Conjure.Language.Expression.Op.True
                     , Conjure.Language.Expression.Op.TwoBars
                     , Conjure.Language.Expression.Op.Union
                     , Conjure.Language.Expression.Op.Xor

                     -- and some operations on the language constructs
                     , Conjure.Language.CategoryOf
                     , Conjure.Language.TypeOf
                     , Conjure.Compute.DomainOf
                     , Conjure.Compute.DomainUnion
                     , Conjure.Language.DomainSizeOf
                     , Conjure.Language.RepresentationOf
                     , Conjure.Language.Arbitrary
                     , Conjure.Language.Instantiate
                     , Conjure.Language.ModelDiff
                     , Conjure.Language.ModelStats
                     , Conjure.Language.Lexer
                     , Conjure.Language.Parser
                     , Conjure.Language.ParserC
                     , Conjure.Language.Pretty
                     , Conjure.Language.NameResolution
                     , Conjure.Language.ZeroVal
                     , Conjure.Process.Sanity
                     , Conjure.Process.Enums
                     , Conjure.Process.Unnameds
                     , Conjure.Process.Enumerate
                     , Conjure.Process.FiniteGivens
                     , Conjure.Process.LettingsForComplexInDoms
                     , Conjure.Process.AttributeAsConstraints
                     , Conjure.Process.DealWithCuts
                     , Conjure.Process.ModelStrengthening
                     , Conjure.Process.InferAttributes

                     -- definitions of representations: how to go down and up
                     , Conjure.Representations
                     , Conjure.Representations.Internal
                     , Conjure.Representations.Common
                     , Conjure.Representations.Combined
                     , Conjure.Representations.Primitive
                     , Conjure.Representations.Tuple
                     , Conjure.Representations.Matrix
                     , Conjure.Representations.Record
                     , Conjure.Representations.Variant
                     , Conjure.Representations.Set.Occurrence
                     , Conjure.Representations.Set.Explicit
                     , Conjure.Representations.Set.ExplicitVarSizeWithDummy
                     , Conjure.Representations.Set.ExplicitVarSizeWithMarker
                     , Conjure.Representations.Set.ExplicitVarSizeWithFlags
                     , Conjure.Representations.MSet.Occurrence
                     , Conjure.Representations.MSet.ExplicitWithFlags
                     , Conjure.Representations.MSet.ExplicitWithRepetition
                     , Conjure.Representations.Function.Function1D
                     , Conjure.Representations.Function.Function1DPartial
                     , Conjure.Representations.Function.FunctionND
                     , Conjure.Representations.Function.FunctionNDPartial
                     , Conjure.Representations.Function.FunctionAsRelation
                     , Conjure.Representations.Sequence.ExplicitBounded
                     , Conjure.Representations.Relation.RelationAsMatrix
                     , Conjure.Representations.Relation.RelationAsSet
                     , Conjure.Representations.Partition.Occurrence
                     , Conjure.Representations.Partition.PartitionAsSet

                     -- definitions of rules
                     , Conjure.Rules.Definition
                     , Conjure.Rules.Import

                     , Conjure.Rules.Vertical.Tuple
                     , Conjure.Rules.Vertical.Record
                     , Conjure.Rules.Vertical.Variant
                     , Conjure.Rules.Vertical.Matrix

                     , Conjure.Rules.Horizontal.Set
                     , Conjure.Rules.Vertical.Set.Occurrence
                     , Conjure.Rules.Vertical.Set.Explicit
                     , Conjure.Rules.Vertical.Set.ExplicitVarSizeWithDummy
                     , Conjure.Rules.Vertical.Set.ExplicitVarSizeWithMarker
                     , Conjure.Rules.Vertical.Set.ExplicitVarSizeWithFlags

                     , Conjure.Rules.Horizontal.MSet
                     , Conjure.Rules.Vertical.MSet.ExplicitWithFlags
                     , Conjure.Rules.Vertical.MSet.ExplicitWithRepetition

                     , Conjure.Rules.Horizontal.Function
                     , Conjure.Rules.Vertical.Function.Function1D
                     , Conjure.Rules.Vertical.Function.Function1DPartial
                     , Conjure.Rules.Vertical.Function.FunctionND
                     , Conjure.Rules.Vertical.Function.FunctionNDPartial
                     , Conjure.Rules.Vertical.Function.FunctionAsRelation

                     , Conjure.Rules.Horizontal.Sequence
                     , Conjure.Rules.Vertical.Sequence.ExplicitBounded

                     , Conjure.Rules.Horizontal.Relation
                     , Conjure.Rules.Vertical.Relation.RelationAsMatrix
                     , Conjure.Rules.Vertical.Relation.RelationAsSet

                     , Conjure.Rules.Horizontal.Partition
                     , Conjure.Rules.Vertical.Partition.PartitionAsSet
                     , Conjure.Rules.Vertical.Partition.Occurrence

                     , Conjure.Rules.BubbleUp
                     , Conjure.Rules.DontCare
                     , Conjure.Rules.TildeOrdering

                     -- supporting modules for the user interfacing parts
                     , Conjure.UI
                     , Conjure.UI.IO
                     , Conjure.UI.MainHelper
                     , Conjure.UI.Model
                     , Conjure.UI.TranslateParameter
                     , Conjure.UI.TranslateSolution
                     , Conjure.UI.ValidateSolution
                     , Conjure.UI.TypeCheck
                     , Conjure.UI.Split
                     , Conjure.UI.VarSymBreaking
                     , Conjure.UI.ParameterGenerator
                     , Conjure.UI.NormaliseQuantified
                     , Conjure.UI.LogFollow

    build-depends    : base
                     -- the export list have changed
                     , aeson >= 1.2.2.0
                     , bytestring
                     , cereal >= 0.5.1.0
                     -- changes in newline handling
                     , cmdargs >= 0.10.14
                     -- a bunch of improvements in 0.5.8.1
                     , containers >= 0.5.8.1
                     , data-default
                     , directory
                     , filepath
                     , hashable
                     , integer-gmp
                     -- >= 4.1.1 because of sepEndBy bugfixes
                     -- < 5 because megaparsec-5 is backwards incompatible
                     , megaparsec >= 4.1.1 && < 5
                     , mtl
                     , parallel-io
                     , pipes
                     , pretty > 1.1.1.1
                     -- >= 2.9 because of the TH fix: https://github.com/nick8325/quickcheck/issues/101
                     , QuickCheck >= 2.9
                     , random
                     , safe
                     , scientific
                     -- 1.6.7, because of the stderr handling fix
                     , shelly >= 1.6.7
                     , split
                     , stm
                     , strict
                     , syb
                     , system-filepath
                     , temporary
                     , text
                     , time
                     -- has a performance-related fix
                     , transformers >= 0.5.3.0
                     , uniplate
                     , unordered-containers
                     , vector
                     -- we do not directly depend on clock, but we need at least 0.7.2
                     -- see https://github.com/corsis/clock/issues/35
                     , clock >= 0.7.2
                     -- we do not directly depend on generic-deriving, but we need at least 1.10.6
                     -- see https://github.com/dreixel/generic-deriving/issues/41
                     , generic-deriving >= 1.10.6

    if impl(ghc == 7.8.*)
        build-depends: template-haskell == 2.9.*
    if impl(ghc == 7.10.*)
        build-depends: template-haskell == 2.10.*
    if impl(ghc == 8.0.*)
        build-depends: template-haskell == 2.11.*
        ghc-options: -Wno-redundant-constraints
    if impl(ghc == 8.2.*)
        build-depends: template-haskell == 2.12.*
    if impl(ghc == 8.4.*)
        build-depends: template-haskell == 2.13.*

    if impl(ghc < 8.4)
        build-depends: semigroups >= 0.18.4

    default-extensions:
        FlexibleContexts
        FlexibleInstances
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        TypeOperators
    ghc-options:
        -O2
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
    ghc-prof-options:
        -fprof-auto-top
        -fprof-auto-exported


Executable conjure
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : Main.hs
    build-depends    : conjure-cp
                     , base
                     , cmdargs
                     , terminal-size >= 0.3.2.1
    default-extensions:
        FlexibleContexts
        FlexibleInstances
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        TypeOperators
    ghc-options:
        -O2
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -threaded
        -rtsopts
        -with-rtsopts=-N1
        -with-rtsopts=-K200M
        -with-rtsopts=-M4G
    ghc-prof-options:
        -fprof-auto-top
        -fprof-auto-exported


Test-Suite conjure-testing
    type             : exitcode-stdio-1.0
    default-language : Haskell2010
    hs-source-dirs   : src/test
    other-modules    : Conjure.Language.DomainSizeTest
                     , Conjure.RepresentationsTest
                     , Conjure.ModelAllSolveAll
                     , Conjure.TypeCheckAll
                     , Conjure.ParsePrint
                     , Conjure.Custom
    main-is          : TestsMain.hs
    build-depends    : conjure-cp
                     , base
                     , bytestring
                     , cmdargs
                     , containers
                     , Diff
                     , shelly
                     , system-filepath
                     -- see https://github.com/feuerbach/tasty/issues/220
                     -- see https://github.com/feuerbach/tasty/issues/221
                     , tasty >= 1.1.0.1
                     , tasty-ant-xml
                     , tasty-hunit
                     , text
    default-extensions:
        FlexibleContexts
        FlexibleInstances
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        TypeOperators
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -threaded
        -rtsopts
        -with-rtsopts=-N1
        -with-rtsopts=-K200M
        -with-rtsopts=-M4G
    ghc-prof-options:
        -fprof-auto-top
        -fprof-auto-exported
